Add the gtk scene to represent anything with full translation, scaling, and gesture event handling.
Signed-off-by: zappynou <106558959+zappynou@users.noreply.github.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,10 @@
 lib_LTLIBRARIES = libcscene.la
 
 libcscene_la_SOURCES = \
+	gui/gtk/scene-click.c \
+	gui/gtk/scene-drag.c \
+	gui/gtk/scene-scale.c \
+	gui/gtk/scene.c \
 	version.c
 
 libcscene_la_CFLAGS = \
