--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,1 +1,10 @@
-bin_PROGRAMS =
+bin_PROGRAMS = example-gtk4
+
+example_gtk4_SOURCES = \
+	main-gtk4.c
+
+example_gtk4_CFLAGS = \
+	$(GTK4_CFLAGS)
+
+example_gtk4_LDADD = \
+	$(top_builddir)/lib/libcscene.la
