Add the autoconf/automake configuration.
Signed-off-by: zappynou <106558959+zappynou@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,23 @@
 .#*
 *#
 
+## Generated build files.
+/aclocal.m4
+/ar-lib
+/*.cache
+/compile
+/config.*
+/configure
+/depcomp
+config.h.in
+/install-sh
+/ltmain.sh
+/m4
+/missing
+Makefile
+Makefile.in
+.libs
+.deps
+
 ## Build directories.
 /*BUILD*
